@@ -56,6 +56,7 @@ Engine fixes:
 * Improved performance when an entity is repeatedly unable to find a path to thier target.
 * Fix bug where killing an enemy with return damage would not set defeat status or reward XP/loot.
 * Fix check of item requirements when a power requires an item but doesn't consume it.
+* Fix 'respec' events to no longer remove item-based powers from the action bar.
 
 Game updates:
 
